# intellidoc_reader

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: DESIGN_DOCUMENT.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/models/: .gitkeep
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/annotation/: export.rs  mod.rs
src-tauri/src/commands/: annotation.rs  document.rs  editor.rs  llm.rs  mod.rs  voice.rs
src-tauri/src/document/: editor.rs  mod.rs  ocr.rs  parser.rs
src-tauri/src/llm/: mod.rs  prompts.rs  providers.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/voice/: audio.rs  commands.rs  mod.rs
src-tauri/src/voice/providers/: mod.rs  piper.rs  whisper.rs
src-tauri/tests/: integration_test.rs
src/components/: ChatPanel.tsx  CodePanel.tsx  DocumentViewer.tsx  LLMSettings.tsx  LineNotes.tsx  MarkdownPreview.tsx  PDFEditor.tsx  Sidebar.tsx  Toolbar.tsx
src/components/editor/: CodeMirrorEditor.tsx  VimModeIndicator.tsx  VimShortcutsPanel.tsx  editor-theme.ts  index.ts  latex-autocomplete.ts  snippet-engine.ts  vim-config.ts
src/components/highlights/: AISchemePreview.tsx  CategoryManager.tsx  CategoryPicker.tsx  ColorPicker.tsx  HighlightLegend.tsx  index.ts
src/constants/: colors.ts
src/stores/: annotationStore.ts  categoryStore.ts  documentStore.ts  editorStore.ts  settingsStore.ts
src/styles/: globals.css
