[package]
name = "intellidoc-reader"
version = "0.1.0"
description = "A fast, lightweight document reader with embedded AI assistant"
authors = [""]
edition = "2021"
rust-version = "1.75"

[lib]
name = "intellidoc_reader_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri Framework
tauri = { version = "2.0", features = ["shell-open"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Document Parsing
# pdfium-render = "0.8"      # PDF rendering (uncomment when implementing)
# epub = "2.1"               # EPUB parsing
# docx-rs = "0.4"            # DOCX parsing
pulldown-cmark = "0.10"      # Markdown parsing

# LLM Integration
# llama-cpp-2 = "0.1"        # llama.cpp bindings (uncomment when implementing)

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Utilities
sha2 = "0.10"                # Document hashing
thiserror = "1.0"            # Error handling
tracing = "0.1"              # Logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5.0"          # Platform-specific directories

# HTTP client for external LLM APIs
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"          # Async trait support

# PDF editing (uncomment when implementing)
# lopdf = "0.31"             # PDF manipulation
# image = "0.24"             # Image processing

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"              # Optimize for size
strip = true                 # Strip symbols
